--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@reduxjs/toolkit": "^1.9.2",
     "@hookform/resolvers": "^2.9.11",
     "joi": "^17.7.1",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "history": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
